# push-deck

./: .gitignore  AGENTS.md  Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/superpowers/plans/: 2026-03-19-push-deck-v1-implementation-plan.md  2026-03-22-coremidi-discovery-followup-plan.md  2026-03-22-coremidi-input-runtime-events-plan.md  2026-03-22-system-discovery-followup-plan.md  2026-03-22-user-port-note-mapping-plan.md  2026-03-25-user-mode-fast-resume.md  verification-notes.md
docs/superpowers/specs/: .2026-03-18-push-deck-design.md.swp  2026-03-18-push-deck-design.md  2026-03-25-open-url-action-design.md  2026-03-25-user-mode-fast-resume-design.md
src/: App.tsx  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  events.rs  lib.rs  main.rs
src-tauri/src/actions/: launch_or_focus.rs  mod.rs  send_shortcut.rs
src-tauri/src/config/: schema.rs  store.rs
src-tauri/src/device/: colors.rs  discovery.rs  input.rs  mod.rs  mode.rs  output.rs  push3.rs
src-tauri/src/display/: mod.rs
src-tauri/src/macos/: mod.rs
src-tauri/tests/: commands.rs  config_schema.rs  config_store.rs  device_discovery.rs  device_input.rs  launch_or_focus.rs  push3_leds.rs  runtime_contracts.rs  runtime_integration.rs  send_shortcut.rs
src/features/editor/: AppPicker.test.tsx  AppPicker.tsx  AppShell.test.tsx  ColorPicker.test.tsx  ColorPicker.tsx  DetailPanel.test.tsx  (+10 more)
src/lib/: api.test.ts  api.ts  types.ts
(+1 files in other folders)
