[package]
name = "push-deck"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
build = "build.rs"

[lib]
name = "push_deck"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = [] }

[dev-dependencies]
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
