[package]
name = "push-deck"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
build = "build.rs"

[lib]
name = "push_deck"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
coremidi = "0.9.0"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSRunningApplication", "NSWorkspace"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSString", "NSURL"] }

[dev-dependencies]
tauri = { version = "2.10.3", features = ["test"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
